--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -23,4 +23,9 @@
     <string name="login">登录</string>
     <string name="user_profile">个人资料</string>
     <string name="save">保存</string>
+    <string name="username_connot_be_modify">用户名为当前账号，无法修改</string>
+    <string name="update_user_nick">修改昵称</string>
+    <string name="update_fail">修改昵称失败</string>
+    <string name="update_nick_fail_unmodify">昵称未修改</string>
+    <string name="update_user_nick_success">修改昵称成功</string>
 </resources>
