--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="update_user_nick">update_user_nick</string>
     <string name="update_nick_fail_unmodify">update_nick_fail_unmodify</string>
     <string name="update_user_nick_success">update_user_nick_success</string>
+    <string name="update_user_avatar">update user avatar</string>
+    <string name="update_user_avatar_fail">update user avatar fail</string>
+    <string name="update_user_avatar_success">update user avatar success</string>
 </resources>
